--- a/index.html
+++ b/index.html
@@ -27,11 +27,52 @@
 
 
 
+<div id="hearArea">
+  <div class="container-fluid">
+    <img src="img/vcard.jpg" height="751" width="1320"  alt="Slider Image">
+
+    <div class="inner_banner">
+    <div class="inner_text_area">
+    <div class="inner_main_text_banner">
+      <div class="row">
+        <div class="col-xl-4"></div> 
+      <div class="col-xl-4"> 
+      <h4>hi! I am y</h4>
+      <h2>ux/ui DESIGNER</h2>
+      <p>Personage is a one-page beautiful resume theme which is a combination of latest web technologies with modern and clean design. Almost all the elements are professionally animated</p>
+      <p>---</p>
+      <p>Find me on</p>
+      <ul id="social">
+          <li><a href="#"><i class="fab  fa-facebook"></i></a></li>
+          <li><a href="#"><i class="fab  fa-twitter"></i></a></li>
+          <li><a href="#"><i class="fab  fa-linkedin"></i></a></li>
+          <li><a href="#"><i class="fab  fa-google-plus"></i></a></li>
+          <li><a href="#"><i class="fab  fa-rss"></i></a></li>
+
+        </ul>
+
+      <p>Dsicover me</p>
+      <i class="fab  fa-mouse">
+      </div>
+      <div class="col-xl-4"></div> 
+      </div>
+    </div>
+    </div>
+  </div>
+    
+  </div>
+</div>
 
 
 
+<div id="mainMenu">
+  <div class="container">
+    <ul>
+      li
+    </ul>
 
-
+  </div>
+</div>
 
 
 
