--- a/index.html
+++ b/index.html
@@ -63,14 +63,70 @@
   </div>
 </div>
 
+<div class="all-items">
+      <!-- Header Area Start -->
+      <header class="header">
+        <div class="container">
+          <div class="menu">
+            <nav class="navbar navbar-default">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
+                  <a class="navbar-brand" href="#"><img src="images/logo.png" alt="Logo"></a>
+                </div>
 
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                  <div class="header-items">
+                    <ul class="nav navbar-nav">
+                      <li><a href="#">Reality</a></li>
+                      <li><a href="#">Living</a></li>
+                      <li><a href="#">Education</a></li>
+                      <li><a href="#">Entertainment</a></li>
+                      <li><a href="#">Mobility</a></li>
+                    </ul>
+                    <div class="search">
+                      <a href="#"><i class="fa fa-search"></i></a>
+                    </div>
+                    <div class="login">
+                      <a href="#"><i class="fa fa-user"></i> Login</a>
+                    </div>
+                  </div> <!-- /.header-items -->
+                </div><!-- /.navbar-collapse -->
+            </nav> <!-- /.navbar -->
+          </div> <!-- /.menu -->
+        </div><!-- /.container -->
+      </header> <!-- /.header -->
+    </div> <!-- /.all-items -->
 
 <div id="mainMenu">
   <div class="container">
-    <ul>
-      li
-    </ul>
+    <div class="row">
+      <div class="col-md-7">
+      </div>
 
+      <div class="col-md-3">
+
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">ABOUT</a></li>
+      <li><a href="#">resume</a></li>
+      <li><a href="#">skill</a></li>
+      <li><a href="#">work</a></li>
+      <li><a href="#">blog</a></li>
+      <li><a href="#">contact</a></li>
+      <li><a href="#">pages</a></li>
+
+    </ul>
+ </div>
+ <div class="col-md-2">
+      </div>
+</div>
   </div>
 </div>
 
